--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "commander": "^11.0.0",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "shortid": "^2.2.16",
+    "yargs": "^17.7.2"
   },
   "repository": {
     "type": "git",
